--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="./css/sobre.css">
+    <link rel="stylesheet" href="./css/raças.css">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +21,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Updock&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Piedra&display=swap" rel="stylesheet">
+
+    <script src="./js/slide.js"></script>
+    <script src="https://kit.fontawesome.com/6cc8a6f404.js" crossorigin="anonymous"></script>
 
     <title>a cat's life</title>
 </head>
@@ -52,8 +57,105 @@
         <section class="home" id="home">
             <h1 class="title">GATOS</h1>
         </section>
-        <section></section>
-        <section></section>
+        <section class="sobre" id="sobre">
+            <div class="icon">
+                <h2 class="titlee"> SOBRE</h2>
+                <img src="./img/bola.png" alt="bola" class="bola" href="#bola">
+            </div>
+            
+            <div class="sobre-gatos">
+                <div class="description-cat">
+                    <span class="description-title">
+                        O gato, também conhecido como gato caseiro, gato urbano ou gato doméstico, é um mamífero
+                        carnívoro
+                        da família dos felídeos, muito popular como animal de estimação. Ocupando o topo da cadeia
+                        alimentar, é predador natural de diversos animais, como roedores,
+                        pássaros, lagartixas e alguns insetos.
+                    </span>
+                    <div class="description-text">
+
+                        <p class="text">
+                            Expectativa de Vida: 12 – 18 anos (Domesticado)
+                        </p>
+                        <p class="text1">
+                            Horas de Sono: 12 – 16 horas
+                        </p>
+                        <p class="text2">
+                            Nome científico: Felis catus
+                        </p>
+                        <p class="text3">
+                            Altura: 23 – 25 cm
+                        </p>
+                        <p class="text4">
+                            Peso: 4 – 5 kg (Domesticado)
+                        </p>
+                        <p class="text5">
+                            Período de Gestação: 65 dias
+                        </p>
+
+                    </div>
+                </div>
+        </section>
+        <section class="raças" id="raças">
+            <div class="icon">
+                <h2 class="titlee"> RAÇAS</h2>
+                <img src="./img/icon2.png" alt="" class="icon2">
+            </div>
+            
+            <div class="img-raças">
+                <div class="maine">
+                    <a href="https://petlove.com.br/maine-coon/r" class="card" target="_blank">
+                        <img src="./img/maine.png" alt="">
+                    </a>
+
+                </div>
+                <div class="siames">
+                    <a href="https://www.petlove.com.br/siames/r" class="card" target="_blank">
+                        <img src="./img/siames.png" alt="">
+                    </a>
+                </div>
+                <div class="exotico">
+                    <a href="https://www.petz.com.br/gato/racas/exotico/" class="card" target="_blank">
+                        <img src="./img/exotico.png" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="names">
+                <p> Maine</p>
+                <P>Siamês </P>
+                <P>Exótico</P>
+
+            </div>
+            <div class="img-raça">
+                <div class="angora">
+                    <a href="https://www.petz.com.br/gato/racas/angora/" class="card" target="_blank">
+                        <img src="./img/angora.png" alt="">
+                    </a>
+
+                </div>
+                <div class="persa">
+                    <a href="https://www.petlove.com.br/persa/r" class="card" target="_blank">
+                        <img src="./img/persa.png" alt="">
+                    </a>
+                </div>
+                <div class="spinks ">
+                    <a href="https://www.petlove.com.br/sphynx/r" class="card" target="_blank">
+                        <img src="./img/spinks 1.png " alt=" ">
+                    </a>
+                </div>
+            </div>
+            <div class="name">
+                <p> Angorá </p>
+                <P>Persa </P>
+                <P>Spynks</P>
+            </div>
+
+            <ul class="outros">
+                <li>
+                    <a href="https://www.peritoanimal.com.br/racas-de-gatos.html" target="_blank">Outros</a>
+                </li>
+            </ul>
+        </section>
         <section></section>
         <section></section>
         <section></section>
