--- a/ds1m-a/cleiton/index.html
+++ b/ds1m-a/cleiton/index.html
@@ -82,12 +82,12 @@
                     </ul>
                     <ul id="atreus">
                         <li>
-                            <img src="./img/atreus.png" alt="">
                             <span> Atreus é um semideus adolescente, filho de Kratos e da Giganta Laufey. 
                                 Os Gigantes e os Aesir o conhecem como "Loki". 
                                 Com a iminência do Ragnarök, Atreus quer a todo custo explorar e compreender melhor a própria identidade para encontrar seu lugar no mundo. 
                                 Ele treinou muito com o pai e, embora o relacionamento entre os dois permaneça firme, Atreus anseia por começar a seguir o seu próprio caminho.
                                 </span>
+                            <img src="./img/atreus.png" alt="">
                         </li>
                     </ul>
                     <div class="personagens_lista_secundarios">
@@ -103,6 +103,30 @@
                             <img src="./img/angrboda.png" alt="">
                             <span onclick="mudarEstado('angrboda')">Angrboda</span>
                         </li>
+                        <ul id="thor">
+                            <li>
+                                <img src="./img/thor.png" alt="">
+                                <span>Thor, o lendário deus do trovão, é filho de Odin e campeão dos Aesir. 
+                                    Magni e Modi, seus filhos, eram aliados de Baldur e foram mortos por Kratos e Atreus.
+                                </span>
+                            </li>
+                        </ul>
+                        <ul id="freya">
+                            <li>
+                                <span>Freya é uma deusa Vanir, já foi líder das Valquírias, ex-mulher de Odin e antiga rainha dos Aesir. 
+                                    Após a morte do seu amado filho Baldur, que estava afastado dela, Freya jurou uma vingança violenta contra Kratos e Atreus.
+                                </span>
+                                <img src="./img/freya.png" alt="">
+                            </li>
+                        </ul>
+                        <ul id="angrboda">
+                            <li>
+                                <img src="./img/angrboda.png" alt="">
+                                <span> Angrboda faz parte dos últimos Gigantes que restaram. 
+                                    Após a queda de Jötunheim, ela se escondeu por muitos anos à espera do momento para concretizar as profecias dos Jötnar.
+                                </span>
+                            </li>
+                        </ul>
                         <li class="personagens_card">
                             <img src="./img/tyr.png" alt="">
                             <span onclick="mudarEstado('tyr')">Tyr</span>
@@ -115,6 +139,35 @@
                             <img src="./img/mimir.png" alt="">
                             <span onclick="mudarEstado('mimir')">Mimir</span>
                         </li>
+                        <ul id="tyr">
+                            <li>
+                                <span> Týr é o deus da guerra Aesir que desapareceu há muito tempo. 
+                                    Ele viajou pelo mundo e se tornou um grande aliado dos Gigantes, buscando a paz entre os Aesir e os Jötnar. 
+                                    Quando Odin violou a paz e declarou guerra a Jötunheim, Týr foi aprisionado.
+                                </span>
+                                <img src="./img/tyr.png" alt="">
+                            </li>
+                        </ul>
+                        <ul id="brok">
+                            <li>
+                                <img src="./img/brok-e-sindri.png" alt="">
+                                <span>Brok e Sindri, os Irmãos Huldra, são ferreiros Anões lendários. 
+                                    Eles são conhecidos ao redor dos Nove Reinos pela impressionante capacidade que têm de forjar armamentos lendários para os deuses. 
+                                    Após reatarem a relação há não muito tempo, os irmãos se uniram para apoiar Kratos e Atreus. 
+                                    O Ragnarök vai pôr à prova a força da união entre esses dois.
+                                </span>
+                            </li>
+                        </ul>
+                        <ul id="mimir">
+                            <li>
+                                <span>Ele pode até ser uma cabeça decepada que depois foi ressuscitada, mas o Mimir continua com o título de homem mais inteligente vivo. 
+                                    Quando Kratos e Atreus o libertaram da árvore em que Odin o mantinha aprisionado, 
+                                    Mimir se juntou à aventura deles e se tornou um amigo de confiança e conselheiro tanto para o pai quanto para o filho. 
+                                    Com os Nove Reinos afundando no caos, agora eles precisarão da sabedoria do Mimir mais do que nunca.
+                                </span>
+                                <img src="./img/mimir.png" alt="">
+                            </li>
+                        </ul>
                     </div>
 
 
