--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -62,7 +62,7 @@
                 <h2 class="titlee"> SOBRE</h2>
                 <img src="./img/bola.png" alt="bola" class="bola" href="#bola">
             </div>
-            
+
             <div class="sobre-gatos">
                 <div class="description-cat">
                     <span class="description-title">
@@ -96,51 +96,52 @@
                     </div>
                 </div>
         </section>
-        <section class="raças" id="raças">
+        <section class="racas" id="racas">
             <div class="icon">
                 <h2 class="titlee"> RAÇAS</h2>
                 <img src="./img/icon2.png" alt="" class="icon2">
             </div>
-            
-            <div class="img-raças">
-                <div class="maine">
+
+            <div class="racas-container">
+                <div class="raca">
                     <a href="https://petlove.com.br/maine-coon/r" class="card" target="_blank">
-                        <img src="./img/maine.png" alt="">
+                        <img class="raca__image" src="./img/maine.png" alt="">
                     </a>
 
                 </div>
-                <div class="siames">
-                    <a href="https://www.petlove.com.br/siames/r" class="card" target="_blank">
-                        <img src="./img/siames.png" alt="">
+                <div class="raca">
+                    <a href="https://www.petlove.com.br/persa/r" class="card" target="_blank">
+                        <img class="raca__image" src="./img/persa.png" alt="">
                     </a>
                 </div>
-                <div class="exotico">
+                <div class="raca">
                     <a href="https://www.petz.com.br/gato/racas/exotico/" class="card" target="_blank">
-                        <img src="./img/exotico.png" alt="">
+                        <img class="raca__image" src="./img/exotico.png" alt="">
                     </a>
                 </div>
             </div>
-            <div class="names">
+            <div class="name">
                 <p> Maine</p>
                 <P>Siamês </P>
                 <P>Exótico</P>
 
             </div>
-            <div class="img-raça">
-                <div class="angora">
+            <div class="racas-container">
+                <div class="raca">
                     <a href="https://www.petz.com.br/gato/racas/angora/" class="card" target="_blank">
-                        <img src="./img/angora.png" alt="">
+                        <img class="raca__image" src="./img/angora.png" alt="">
                     </a>
 
                 </div>
-                <div class="persa">
-                    <a href="https://www.petlove.com.br/persa/r" class="card" target="_blank">
-                        <img src="./img/persa.png" alt="">
+                <div class="racas-container">
+                    <a href="https://www.petlove.com.br/siames/r" class="card" target="_blank">
+                        <img src="./img/siames.png" alt="">
                     </a>
                 </div>
-                <div class="spinks ">
+
+                <div class="raca ">
                     <a href="https://www.petlove.com.br/sphynx/r" class="card" target="_blank">
-                        <img src="./img/spinks 1.png " alt=" ">
+                        <img class="raca__image" src="./img/spinks 1.png " alt=" ">
                     </a>
                 </div>
             </div>
