--- a/ds1m-b/paula-blesa/index.html
+++ b/ds1m-b/paula-blesa/index.html
@@ -85,7 +85,7 @@
 
             <div class="sobre-gatos">
                 <div class="description-cat">
-                    <span class="description-title">
+                    <span class="description-text">
                         O gato, também conhecido como gato caseiro, gato urbano ou gato doméstico, é um mamífero
                         carnívoro
                         da família dos felídeos, muito popular como animal de estimação. Ocupando o topo da cadeia
@@ -153,7 +153,7 @@
                 <h2 class="title-raça"> RAÇAS</h2>
                 <img src="./img/icon2.png" alt="" class="icon2">
             </div>
-            
+
             <div class="img-raças">
                 <div class="maine">
                     <a href="https://petlove.com.br/maine-coon/r" class="card" target="_blank">
