--- a/ds1t-a/Luiz Gustavo/index.html
+++ b/ds1t-a/Luiz Gustavo/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/cb4f3aa626.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./img/MAÇÃ.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
@@ -19,6 +20,7 @@
     <link rel="stylesheet" href="/css/text.css">
     <link rel="stylesheet" href="/css/button.css">
     <link rel="stylesheet" href="/css/watch.css">
+    <link rel="stylesheet" href="/css/contato.css">
     <title>One Page</title>
 </head>
 
@@ -122,7 +124,7 @@
                 <p class="text-button">
                     IPad pro o mais potente e tecnologico atualmente veja:
                 </p>
-                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-ipad-airpos-watch ">Clique Aqui</a>
+                <a href="https://www.apple.com/br/ipad-pro/" class="button-ipad-airpos-watch ">Clique Aqui</a>
             </div>
         </section>
         <section class="section-mac" id="mac">
@@ -145,7 +147,7 @@
                         Max
                         e oferecem um desempenho profissional incomparável. Veja no clicando no botão:
                     </p>
-                    <a href="https://www.apple.com/br/iphone-14-pro/" class="button-iphone-mac">Clique Aqui</a>
+                    <a href="https://www.apple.com/br/macbook-pro-13/" class="button-iphone-mac">Clique Aqui</a>
                 </div>
             </div>
         </section>
@@ -164,17 +166,110 @@
                         <p class="text-button-airpods">Clique no botão e vejo o mais atual, o Airpos Pro:</p>
                     </div>
                 </div>
-                <a href="https://www.apple.com/br/iphone-14-pro/" class="button-ipad-airpos-watch ">Clique Aqui</a>
+                <a href="https://www.apple.com/br/airpods-pro/" class="button-ipad-airpos-watch ">Clique Aqui</a>
 
             </div>
             <div class="div-title-wacth">
                 <h1 class="title">Apple Watch</h1>
             </div>
-            <div class="watch"></div>
+            <div class="main-watch">
+                <p class="text-watch">
+                    O Apple Watch (estilizado como WATCH) é uma linha de relógios inteligentes criado pela Apple.
+                    Ele possui a capacidade de rastrear exercícios físicos, recursos voltados para a saúde,
+                    comunicações sem fio e é integrado com o iOS e outros produtos da Apple para realização de algumas
+                    ações.
+                    Clique no botão e vejo o Apple Watch Series 6 o mais avaçado atualmente:
+                </p>
+                <img src="/img/WATCH.png" alt="watch" class="watch">
+                <a href="https://www.apple.com/br/apple-watch-ultra/" class="button-ipad-airpos-watch ">Clique Aqui</a>
+            </div>
             </div>
         </section>
-        <section class="section-contato" id="contato"></section>
+        <section class="section-contato" id="contato">
+            <div class="title-contato">CONTATO</div>
+            <div class="main-contato">
+                
+                <div class="contatos">
+                    <h2 class="sub-title">Contato</h2>
+                    <ul class="contato-container">
+                        <li>
+                            <div class="contato-item">
+                                <i class="fa-solid fa-phone"></i>
+                                <span>(11) 4706-1086</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="contato-item">
+                                <i class="fa-solid fa-envelope"></i>
+                                <span>luizgustavo.sp2020@gmail.com</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="contato-item">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <span>Barueri,SP</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <ul class="social-container">
+                    <li class="social-icon">
+                        <a href="https://www.instagram.com/luyz.dev/">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a href="https://www.linkedin.com/in/luyz-dev">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <a href="https://github.com/luyz-dev">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
+                    </li>
+                    <li class="social-icon">
+                        <i class="fa-brands fa-facebook"></i>
+                    </li>
+                </ul>
+                <ul class="link-container">
+                    <li class="li-link">
+                        <a href="#inicio">
+                            Início
+                        </a>
+                    </li>
+                    <li class="li-link">
+                        <a href="#iphone">
+                            Iphone
+                        </a>
+                    </li>
+                    <li class="li-link">
+                        <a href="#ipad">
+                            Ipad
+                        </a>
+                    </li>
+                    <li class="li-link">
+                        <a href="#mac">
+                            MacBook
+                        </a>
+                    </li>
+                    <li class="li-link">
+                        <a href="#airpods-watch">
+                            AirPods
+                        </a>
+                    </li>
+                    <li class="li-link">
+                        <a href="#contato">
+                            Contato
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
+    <footer>
+        Todos os direitos Reservados | 2022 | Luiz Gustavo
+    </footer>
 </body>
 
 </html>
