--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -75,10 +75,10 @@
                         que luta contra a SEC (Shinra Electrical Power Company), por utilizar o “sangue” do planeta,
                         conhecido como mako, para produzir uma quantidade inimaginável de energia, armas e produtos
                         químicos .</p>
-                    <img src="./img/Imagem_introducao.png" alt="imagem-introducao">
+                    <img class="imagem-introducao" src="./img/Imagem_introducao.png" alt="imagem-introducao">
                 </div>
                 <div class="conclusao">
-                    <img src="./img/Imagem_conclusao.png" alt="imagem-conclusao">
+                    <img class="imagem-conclusao" src="./img/Imagem_conclusao.png" alt="imagem-conclusao">
                     <p class="texto"> O que poucos sabem é que Cloud é na verdade um Ex-Soldier, a tropa que reune os
                         soldados mais poderosos da Shinra, que após ter sua cidade natal destruida e sua familia
                         assassinada pelo seu antigo ídolo e parceiro Sephiroth, o desmemoriado soldier tem como objetivo
@@ -87,7 +87,15 @@
             </container>
         </section>
         <section class="personagens" id="personagens"></section>
-        <section class="producao" id="producao"></section>
+        <section class="producao" id="producao">
+            <div class="titulo-producao">
+                <p class="titulo">Produção</p>
+            </div>
+            <div class="producao-intro">
+                <img src="./img/Introducao-producao (1).png" alt="">
+                <p class="texto-intro">     Final Fantasy VII foi lançado em 1997, para o Playstation 1 e PC. Foi produzido pela empresa japonesa SquareSoft, hoje chamada de SquareEnix, e foi planejado para ser lançado no SuperNintendo, mas como a equipe queria usar a nova tecnologia 3D, optaram pelo PS, principalmente pelo CD-Rom.</p>
+            </div>
+        </section>
         <section class="criadores" id="criadores">
             <div class="titulo-criadores">
                 <p class="titulo">Criadores</p>
