--- a/ds1t-b/one-page-nike/index.html
+++ b/ds1t-b/one-page-nike/index.html
@@ -84,6 +84,12 @@
                     <img src="./img/black-friday/produtos2/agasalho-fem.png" alt="agasalho-fem" class="slider">
                     <img src="./img/black-friday/produtos2/calca-masc.png" alt="calca-masc" class="slider">
                     <img src="./img/black-friday/produtos2/camiseta-barca3.png" alt="camiseta-barca3" class="slider">
+
+                    <div class="container-images2">
+                        <img src="./img/black-friday/produtos2/camiseta-psg-white.png" alt="camiseta-psg-white" class="slider">
+                        <img src="./img/black-friday/produtos2/legging-nike.png" alt="legging-nike" class="slider">
+                        <img src="./img/black-friday/produtos2/shorts-nike-10.png" alt="shorts-nike-10" class="slider">
+                    </div>
                 </div>
                 <button id="next-button"></button>
             </div>
