Section Produção completa

--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -91,9 +91,23 @@
             <div class="titulo-producao">
                 <p class="titulo">Produção</p>
             </div>
-            <div class="producao-intro">
-                <img src="./img/Introducao-producao (1).png" alt="">
-                <p class="texto-intro">     Final Fantasy VII foi lançado em 1997, para o Playstation 1 e PC. Foi produzido pela empresa japonesa SquareSoft, hoje chamada de SquareEnix, e foi planejado para ser lançado no SuperNintendo, mas como a equipe queria usar a nova tecnologia 3D, optaram pelo PS, principalmente pelo CD-Rom.</p>
+            <div class="intro">
+                <div class="bloco-producao">
+                    <img class="imagem-producao" src="./img/Introducao-producao (1).png" alt="">
+                    <p class="texto-producao">     Final Fantasy VII foi lançado em 1997, para o Playstation 1 e PC. Foi produzido pela empresa japonesa SquareSoft, hoje chamada de SquareEnix, e foi planejado para ser lançado no SuperNintendo, mas como a equipe queria usar a nova tecnologia 3D, optaram pelo PS, principalmente pelo CD-Rom.</p>
+                </div>
+            </div>
+            <div class="desen">
+                <div class="bloco-producao">
+                    <p class="texto-producao">    O desenvolvimento em si começou em 1994, tendo uma equipe de mais de 120 artistas e programadores divididos em duas equipes (Japão e Estados Unidos), e tendo um orçamento de 45 milhões de dolares, um dos mais caros da história até então.</p>
+                    <img class="imagem-producao" src="./img/Desenvolvimento_producao.png" alt="">
+                </div>
+            </div>
+            <div class="conclu">
+                <div class="bloco-producao">
+                    <img class="imagem-producao" src="./img/Conclusao-producao (1).png" alt="">
+                    <p class="texto-producao">    Uma enorme campanha de divulgação foi feita, e Final Fantasy VII se tornou um sucesso de publico e de crítica, tendo ganhado os prêmios de jogo do ano, melhor RPG do ano e melhor jogo do Playstation, além de ter vendido mais de 1 milhão de cópias só em 1997.</p>
+                </div>
             </div>
         </section>
         <section class="criadores" id="criadores">
