Section Personagens incompleta

--- a/ds1t-b/Projeto FF/index.html
+++ b/ds1t-b/Projeto FF/index.html
@@ -86,7 +86,12 @@
                 </div>
             </container>
         </section>
-        <section class="personagens" id="personagens"></section>
+        <section class="personagens" id="personagens">
+            <div class="titulo-personagens">
+                <p class="titulo">Personagens</p>
+            </div>
+
+        </section>
         <section class="producao" id="producao">
             <div class="titulo-producao">
                 <p class="titulo">Produção</p>
