background das seções

--- a/ds1t-a/lohannes/index.html
+++ b/ds1t-a/lohannes/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/dropdown.css">
+    <link rel="stylesheet" href="./css/home.css">
     <title>Avatar - A Lenda</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Permanent+Marker&family=Sarala:wght@400;700&display=swap"
@@ -43,7 +44,10 @@
         </div>
     </header>
     <main>
-        <section id="home"></section>
+        <section id="home">
+           <img class="principal" src="./images/Intro.png" alt="">
+           <img class="grande_logo" src="./images/Logo.png" alt="">
+        </section>
         <section id="oQueEAvatar"></section>
         <section id="atla_Personagens"></section>
         <section id="atlok_Personagens"></section>
