sessao contatos e footer em andamento

--- a/ds1m-b/one-page-leticia/index.html
+++ b/ds1m-b/one-page-leticia/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="./css/filmes.css">
     <link rel="stylesheet" href="./css/museu.css"> 
     <link rel="stylesheet" href="./css/slider.css">
+    <link rel="stylesheet" href="./css/contatos.css">
+    <script src="https://kit.fontawesome.com/b94100b9f6.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;800;900&display=swap" rel="stylesheet"> 
@@ -181,8 +183,66 @@
         </div> 
     </section>
 
+    <section class="contatos" id="contato">
+        <h2 class="section-title">Contatos</h2>
 
+        <ul class="link-container">
+            <li>
+                <h3>Links</h3>
+            </li>
+            <li>
+                <a href="#home">Início</a>
+            </li>
+            <li>
+                <a href="#sobre">Sobre</a>
+            </li>
+            <li>
+                <a href="#fundadores">Fundadores</a>
+            </li>
+            <li>
+                <a href="#filmes">Contatos</a>
+            </li>
+            <li>
+                <a href="#museu">Museu</a>
+            </li>
+            <li>
+                <a href="#contatos">Contatos</a>
+            </li>
+        </ul>
+
+        <ul class="social-container">
+            <li class="social">
+                <a href="https://www.instagram.com/ghiblibrasil/" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+            <li class="social">
+                <a href="https://twitter.com/GhibliBrasil" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li class="social">
+                <a href="https://www.youtube.com/StudioGhibliBrasil" target="_blank">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </li>
+            <li class="social">
+                <a href="https://open.spotify.com/user/lu4nob7pzxkxihazh3omxld3t?si=LE0-K-TlQdiBHJYQcQcD7w&nd=1" target="_blank">
+                    <i class="fab fa-spotify"></i>
+                </a>
+               
+            </li>
+        </ul>
+
+        <span class="gif">
+            <img src="https://64.media.tumblr.com/807cf5c6e3ed6f7db44c3401e0c2fa00/85b2b467b7b384fa-13/s540x810/85928d36c1ead3dfa4c76f35194b884db8c12a90.gif" alt="">
+            <!-- <img src="https://thumbs.gfycat.com/OrderlyShamelessBushbaby-size_restricted.gif" alt=""> -->
+        </span>
+    </section>
 </main>
 
+<footer>
+    Todos os direitos reservados 2022| Desenvolvido por Letícia Evelin 
+</footer>
 </body>
 </html>
