--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/presentation.css">
     <link rel="stylesheet" href="./css/composers.css">
+    <link rel="stylesheet" href="./css/instruments.css">
 </head>
 
 <body>
@@ -56,7 +57,7 @@
             </a>
         </nav>
     </section>
-    <section class="composers">
+    <section class="composers perfil">
         <ul>
             <li id="chopin">
                 <img src="./img/chopin 1.png" alt="Desenho do Chopin">
@@ -81,7 +82,35 @@
             <img src="./img/circle-1.png" alt="" class="index">
         </a>
     </section>
-    <section class="instruments"></section>
+    <section class="composers instruments">
+        <div class="info">
+            <p>Alguns instrumentos são mais propensos para a música clássica. </p>
+            <p>Estes possuem propriedades de material e de tempo que reforçam isso.</p>
+        </div>
+        <ul>
+            <li id="cravo">
+                <img src="./img/cravo.png" alt="Desenho do cravo">
+                <h2>CRAVO</h2>
+                <p>Surgindo ao século XV, o Cravo é um instrumento de cordas pinçadas semelhante ao piano. Possui som tangendo ou beliscando as cordas. Ele veio antes do piano existir.
+                </p>
+            </li>
+            <li id="piano">
+                <img src="./img/piano.png" alt="Imagem de um piano">
+                <h2>PIANO</h2>
+                <p>O Piano é um instrumento de cordas percussivas com som semelhante ao de uma harpa. É considerado uns dos mais difíceis instrumentos de tocar. Foi um dos principais instrumentos de Bethoven.
+                </p>
+            </li>
+            <li id="violino">
+                <img src="./img/violino.png" alt="Imagem de um violion">
+                <h2>VIOLINO</h2>
+                <p>O instrumento de cordas mais agudo de sua família, o violino possui um arco que o caracteriza como instrumento de atrito. Possui um som doce e suave. 
+                </p>
+            </li>
+        </ul>
+        <a href="#home">
+            <img src="./img/circle-2.png" alt="" class="index">
+        </a>
+    </section>
     <section class="about"> </section>
 </body>
 
