--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -18,10 +18,12 @@
     <link rel="stylesheet" href="./css/presentation.css">
     <link rel="stylesheet" href="./css/composers.css">
     <link rel="stylesheet" href="./css/instruments.css">
+    <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/skills.css">
+    <script src="https://kit.fontawesome.com/b2396ffade.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/backgrounds.css">
 </head>
-
-<body>
-    
+<body><
     <section class="home" id="home">
         <header>
             <a href="#HOME">
@@ -56,6 +58,7 @@
                 <img src="./img/circle-3.png" alt="">
             </a>
         </nav>
+       
     </section>
     <section class="composers perfil">
         <ul>
@@ -111,7 +114,44 @@
             <img src="./img/circle-2.png" alt="" class="index">
         </a>
     </section>
-    <section class="about"> </section>
+    <section class="about">
+        <div class="about__container">
+            <img src="./img/foto perfil felipe 1.png" alt="">
+            <div class="whoiam">
+                <h3 id="eusou">Eu sou</h3>
+                <h3 id="felipeflorencio">Felipe Florencio</h3>
+            </div>
+            <p>Estou aprendendo programação front-end e back-end. Gosto de música e também sei tocar alguns intrumentos.</p>
+            <div class="skills">
+                <h3 class="skills__title">Habilidades</h3>
+                <ul class="skills__container">
+                    <li class="skills__icon">
+                        <i class="fab fa-html5"></i>
+                        <span>HTML</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fab fa-css3-alt"></i>
+                        <span>CSS</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fab fa-js-square"></i>
+                        <span>JavaScript</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fab fa-figma"></i>
+                        <span>FIGMA</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fab fa-github"></i>
+                        <span>GITHUB</span>
+                    </li>
+                    <li class="skills__icon">
+                        <i class="fab fa-java"></i>
+                        <span>JAVA</span>
+                    </li>
+                </ul>
+        </div>
+    </section>
 </body>
 
 </html>
