Colocado backgrounds nas seções

--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -23,7 +23,7 @@
     <script src="https://kit.fontawesome.com/b2396ffade.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/backgrounds.css">
 </head>
-<body><
+<body>
     <section class="home" id="home">
         <header>
             <a href="#HOME">
@@ -39,6 +39,7 @@
                 <h2>ABOUT</h2>
             </a>
         </header>
+       
         <div class="home__content">
             <div class="presentation">
                 <h1>MUSIC FOR YOU</h1>
@@ -46,6 +47,7 @@
                 <button>Open App</button>
             </div>
             <img src="./img/cello-home.png" class="cello">
+            <img src="./img/bg-home.png" alt="" id="bghome">
         </div>
         <nav class="index">
             <a href="">
@@ -80,7 +82,9 @@
                 <p>Autor de mais de 600 obras, Wolfgang Amadeus Mozart foi um compositor compentente desde os cinco anos de idade. Possuiu habilidades no teclado e violino. Uma de suas maiores composições é a Sinfonia n°40.  
                 </p>
             </li>
+            <img src="./img/bg-composers.png" alt="" id="bgcomposers">
         </ul>
+       
         <a href="#home">
             <img src="./img/circle-1.png" alt="" class="index">
         </a>
@@ -109,6 +113,7 @@
                 <p>O instrumento de cordas mais agudo de sua família, o violino possui um arco que o caracteriza como instrumento de atrito. Possui um som doce e suave. 
                 </p>
             </li>
+            <img src="./img/bg-instruments.png" alt="" id="bginstruments">
         </ul>
         <a href="#home">
             <img src="./img/circle-2.png" alt="" class="index">
@@ -151,6 +156,7 @@
                     </li>
                 </ul>
         </div>
+        <img src="./img/bg-about.png" alt="" class="backgrounds" id="bgabout">
     </section>
 </body>
 
